# captchav2

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  benchmark_results.json  convert_benchmark_to_csv.py  deploy.sh  download_gcs_folder.py  main.py  pyproject.toml  requirements.txt
agent_frameworks/: __init__.py  browseruse_cli.py  crewai_cli.py  llm_logger.py
captcha_data/Adversarial/: ground_truth.json
captcha_data/Backmost_Layer/: cell_pool.json  ground_truth.json
captcha_data/Bingo/: ground_truth.json
captcha_data/Color_Cipher/: ground_truth.json
captcha_data/Color_Counting/: ground_truth.json
captcha_data/Deformation/: ground_truth.json
captcha_data/Dice_Count/: ground_truth.json
captcha_data/Dynamic_Jigsaw/: ground_truth.json
captcha_data/Global_Phase_Drift/: ground_truth.json
captcha_data/Hole_Counting/: cell_pool.json  ground_truth.json
captcha_data/Jigsaw_Puzzle/: README.md  ground_truth.json
captcha_data/Map_Parity/: ground_truth.json  service.py
captcha_data/Mirror/: ground_truth.json
captcha_data/Red_Dot/: ground_truth.json
captcha_data/Rhythm/: cell_pool.json  ground_truth.json
captcha_data/Rotation_Match/: cell_pool.json  ground_truth.json
captcha_data/Set_Game/: ground_truth.json
captcha_data/Shadow_Direction/: cell_pool.json  ground_truth.json
captcha_data/Shadow_Plausible/: ground_truth.json
captcha_data/Spooky_Circle/: ground_truth.json
captcha_data/Spooky_Circle_Grid/: ground_truth.json  library_index.json
captcha_data/Spooky_Circle_Grid_Direction/: ground_truth.json  library_index.json
captcha_generation/: generate_dynamic_jigsaw.py  generate_spooky_jigsaw.py
eval/: aggregate_runs.py  run_eval_offline.py  run_eval_online.py
leaderboard/: .gitignore  README.md  app.py  results.csv
leaderborad/: app.py
templates/: index.html
(+21 files in other folders)
