[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
include = [
    "app.py",
    "main.py",
    "captcha_data",
    "static",
    "templates",
    "agent_frameworks",
]

[project]
name = "captchav2"
version = "0.2.0"
description = "CAPTCHA Puzzle Benchmark Application - A web-based benchmark platform for testing various CAPTCHA puzzle types"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0.0",
    "werkzeug>=2.0.0",
    "flask-cors>=3.0.0",
    "pillow>=9.0.0",
    "gunicorn>=20.0.0",
    "python-dotenv"
]


[dependency-groups]
dev = []

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
